Nome dos médodos simplificados, TemplateEngine

--- a/src/interface/event.html
+++ b/src/interface/event.html
@@ -1,7 +1,7 @@
-<td class="tribe-event-time">{{ date }} </td>
+<td class="tribe-event-time">{{ this.date }} </td>
 <td class="tribe-event-detail">
-    <span class="icon-bg-black icon-26x26-{{ icon }}"></span>
+    <span class="icon-bg-black icon-26x26-{{ this.icon }}"></span>
     <div class="text-tribe-news">
-        <span>{{ text }}</span>
+        <span>{{ this.text }}</span>
     </div>
 </td>
