--- a/src/interface/window.html
+++ b/src/interface/window.html
@@ -30,6 +30,13 @@
 
         <!-- INFORMAÇÕES -->
         <div class="box-paper footer has-footer-upper autofarm-content-info">
+            <h5 class="twx-section">
+                <div class="jackpot">{{ this.info.customScripts[0] }}</div>
+            </h5>
+            <div class="promo">
+                <p>{{ this.info.customScripts[1] }}</p>
+                <p>{{ this.info.customScripts[2] }}</p>
+            </div>
             <h5 class="twx-section">{{ this.info.presets[0] }}</h5>
             <div>
                 <p>{{ this.info.presets[1] }}</p>
